# autism_detection

./: .gitignore  .replit  Dockerfile.streamlit  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  replit.md  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: Dockerfile  package-lock.json  package.json  server.js
data/: asd_questions.json
database/: models.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  theme.js
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx
frontend/src/pages/: Admin.jsx  FaceTest.jsx  Overview.jsx  Results.jsx
models/: behavioral_model.py  gaze_analyzer.py
pages/: admin_dashboard.py  demo_face_test.py  education.py  face_recognition_test.py  gaze_assessment.py  motion_tracking_test.py  questionnaire.py  results.py  results_analysis.py  social_attention_test.py  visual_pattern_test.py
utils/: camera_utils.py  data_processor.py  demo_mode.py
