[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "av>=14.4.0",
    "plotly>=6.2.0",
    "streamlit-webrtc>=0.63.3",
    "streamlit>=1.47.1",
    "mediapipe>=0.10.14",
    "scikit-learn>=1.7.1",
    "joblib>=1.5.1",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
    "alembic>=1.16.4",
]
